# TelegrammBotCpp

./: .gitignore  AnekdotParser.hpp  ArgessiveArray.xml  Bot.hpp  BotResponser.hpp  BotUtils.hpp  CMakeLists.txt  PagesData.xml  README.md  Randomiser.hpp  ResponseData.xml  ResponseGenerator.hpp  TalkingBot.hpp  UserInfoWorker.hpp  UsserDB.xml  data.xml  main.cpp
FileHeaders/: bd.td
